app/src/main/java/com/example/basecleanarchitechturedagger/data/remote/entity/error/ErrorInterface.kt
package com.example.basecleanarchitechturedagger.data.remote.entity.error

interface ErrorInterface {
  var status: Int
}
